# multimedia-study

./: CMakeLists.txt  main.c
examples/: CMakeLists.txt  example-av-capturer.c  example-client.c  example-server.c
include/: extreme-remotedisplay.h  extreme.h
include/extreme/: extreme-av-capturer.h  extreme-av-encoder.h  extreme-types.h
include/extreme-audio-capturer/: extreme-audio-capturer.h
include/extreme-audio-common/: extreme-audio-common.h
pa-audio-capturer/: CMakeLists.txt  pa-audio-capturer.c  pa-audio-capturer.h  音频基础知识.txt
src/av-capturer/: extreme-av-capturer.c
src/av-encoder/: extreme-av-encoder.c
src/extreme-audio-capturer/: CMakeLists.txt  extreme-audio-capturer.c
src/extreme-audio-capturer/platform/: linux-audio-capturer.c  platform-audio-capturer.h  pulseaudio-capturer.c  pulseaudio-capturer.h
src/extreme-utils/: time-filter.h
src/extreme-video-encoder/platform/: windows-video-encoder.c
src/platform/: platform-av-capturer.h  platform-types.h
src/platform/linux/: alsa-capturer.c  alsa-capturer.h  platform-av-capturer.c  pulseaudio-capturer.c  pulseaudio-capturer.h
utils/: time-filter.c
